<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- <string name="rest_base_url">http://18.208.61.61:12345</string> -->
    <string name="rest_base_url">https://lscapp.pta.com.co</string>

    <string name="app_name">LSC App</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="practice">Practicar</string>
    <string name="dictionary">Diccionario</string>
    <string name="leaderboard">Tabla de clasificación</string>
    <string name="about">Acerca de</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_practice">Práctica de Señas</string>
    <string name="edit">Editar</string>
    <string name="search">Buscar</string>

    <!-- Label for the show bass checkbox preference -->
    <string name="pref_background_black_label">Fondo negro</string>
    <!-- Key name for storing bass in SharedPreferences -->
    <string name="pref_background_black_key" translatable="false">background_black</string>
    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <string name="error_message">
        Un error ha ocurrido.
    </string>
    <string name="imageview_description">
        Contiene la imagen capturada
    </string>
    <string name="permission_denied">Permission denied</string>

    <!--LSCApp Message-->
    <string name="api_retry_error">Reintentar</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Un error ha ocurrido!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!-- register and login -->
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirm">Confirmar contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este correo es incorrecto</string>
    <string name="error_invalid_password">Contraseña incorrecta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Registrarse</string>
    <string name="error_password_mismatch">Contraseñas no concuerdan</string>


    <!-- Lessons -->
    <string name="lessonEntities">Lecciones</string>
    <string name="level_image">Imagen nivel</string>
    <!-- Practices -->
    <string name="practice_end_button">Continuar</string>
    <string name="practice_which_one_video_question">¿Qué describe la seña?</string>
    <string name="practice_discover_image_question1">Observa la seña</string>
    <string name="practice_discover_image_question2">¿A que imágen hace referencia?</string>
    <string name="practice_take_picture_question">Realiza la seña con la mano y tomale una foto</string>
    <string name="practice_translate_video_question">¿Qué describe la seña?</string>
    <string name="practice_warning_message">¡Fallaste!</string>
    <string name="practice_success_message">¡Correcto!</string>
    <string name="practice_take_picture_button">Tomar foto</string>
    <string name="practice_take_sign_analizing">Analizando&#8230;</string>

    <string name="camera_permission_denied_messsage">Permisos denegados</string>
    <string name="camera_permission_activate">Habilitar permisos</string>

    <!-- Profile -->
    <string name="profile">Perfil</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="progress_title">Progreso general</string>
    <string name="achievements_title">Logros</string>
    <string name="save">Guardar</string>

</resources>
