<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_border_all_black_24dp"
            android:title="@string/practice" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_library_books_black"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_language_black"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/configuration" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_clear_black"
            android:title="@string/sign_out" />

    </group>

</menu>
